<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Scroll"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#359005"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Question1"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/q1"
            android:scaleType="centerCrop"/>

        <RadioGroup
            android:id="@+id/radioGroupOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="10dp"
                android:text="@string/RadioButtonQuestionOneOptionOne"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_CorrectAnswerOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="10dp"
                android:text="@string/RadioButtonQuestionOneOptionTwo"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="10dp"
                android:text="@string/RadioButtonQuestionOneOptionThree"
                android:textSize="14sp" />
        </RadioGroup>


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question2"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/q2"
                android:scaleType="centerCrop"/>

            <RadioGroup
                android:id="@+id/radioGroupTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionTwoOptionOne"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionTwoOptionTwo"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionTwoOptionThree"
                    android:textSize="14sp" />


            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question3"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/q3"
                android:scaleType="centerCrop"/>

            <RadioGroup
                android:id="@+id/radioGroupThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionThreeOptionOne"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionThreeOptionTwo"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionThreeOptionThree"
                    android:textSize="14sp" />
            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question4"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/q4"
                android:scaleType="centerCrop"/>

            <RadioGroup
                android:id="@+id/radioGroupFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionFourOptionOne"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionFourOptionTwo"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionFourOptionThree"
                    android:textSize="14sp" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question5"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/q5" />

            <EditText
                android:id="@+id/userResponse_AnswerFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/Typehere"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question7"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/q6" />

            <CheckBox
                android:id="@+id/cb_CorrectAnswerEight_1"
                style="@style/CustomCheckBoxStyle"
                android:text="@string/CheckBoxQuestionSevenOptionOne"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/cb_CorrectAnswerEight_2"
                style="@style/CustomCheckBoxStyle"
                android:text="@string/CheckBoxQuestionSevenOptionTwo"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/cb_WrongAnswerEight"
                style="@style/CustomCheckBoxStyle"
                android:text="@string/CheckBoxQuestionSevenOptionThree"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/cb_CorrectAnswerEight_3"
                style="@style/CustomCheckBoxStyle"
                android:text="@string/CheckBoxQuestionSevenOptionFour"
                android:textColor="#000000" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <Button
                android:onClick="SubmitResponse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/ButtonSubmit" />

            <Button
                android:id="@+id/all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:onClick="ResetQuiz"
                android:text="@string/ButtonReset" />

        </LinearLayout>




    </LinearLayout>

</ScrollView>